--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body{
 /*Construction Section Style*/
 
 .const-msg-container{
-    background-image: url("./img/coming_soon_bg.jpg");
+    background-image: url("/img/coming_soon_bg.jpg");
     background-size: cover;
     background-position: center;
     width: 100vw;
